# nat-rust

./: .gitignore  readme.md
nat-client/: .env  Cargo.toml
nat-client/src/: main.rs
nat-common/: .env  Cargo.toml
nat-common/src/: chat_protocol.rs  lib.rs  main.rs  nat.rs  protocol_factory.rs
nat-server/: .env  Cargo.toml  readme.md
nat-server/api/: Cargo.toml
nat-server/api/src/: lib.rs
nat-server/api/static/css/: normalize.css
nat-server/api/templates/: index.html.tera
nat-server/entity/: Cargo.toml
nat-server/entity/src/: post.rs
nat-server/my-api/: Cargo.toml
nat-server/my-api/src/: lib.rs  main-bak.rs  main.rs
nat-server/my-api/static/css/: normalize.css
nat-server/my-entity/: Cargo.toml
nat-server/my-entity/src/: car.rs  lib.rs  userinfo.rs
nat-server/my-service/: Cargo.toml
nat-server/my-service/src/: car_dao.rs  car_service.rs  config.rs  lib.rs  userinfo_dao.rs  userinfo_service.rs
nat-server/service/: Cargo.toml
nat-server/service/src/: mutation.rs
nat-server/service/tests/: mock.rs  prepare.rs
nat-server/src/: main.bak  main.bak2  main.rs
nat-server/static/: index.html
