[package]
name = "nat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
serde = { version = "1.0", features = ["derive"] }
env_logger="0.10.0"
log="0.4.17"
actix = "0.11.0"
actix-rt = "2.2" # <-- Runtime for actix
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
derive_more="0.99.17"
actix-files="0.6.2"

sea-orm ="0.11.3"

api={path="api"}

[workspace]
members = [".", "api", "service", "entity"]