[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service = { path = "../service" }
actix-files = "0.6"
actix-http = "3"
actix-rt = "2.7"
actix-service = "2"
actix-web = "4"
tera = "1.15.0"
dotenvy = "0.15"
listenfd = "0.5"
serde = "1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
entity = { path = "../entity" }