[package]
name = "my-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-entity = { path = "../my-entity" }
actix-rt = "2.2" # <-- Runtime for actix
sea-orm= {version = "0.11.3", features = ["debug-print", "runtime-tokio-native-tls","sqlx-mysql"]}
tokio = { version = "1.20.0", features = ["macros", "rt"] }
nat-common={path="../../nat-common"}
bincode="1.3.3"

